Fixes for responsive UI on small screens

--- a/css/default.scss
+++ b/css/default.scss
@@ -59,6 +59,7 @@ body > header {
   height: $size-header-height;
   line-height: $size-header-height;
   padding: 0 $padding-small;
+  z-index: 100;
 
   background: $color-dark-primary;
   font-size: 30px;
@@ -71,6 +72,7 @@ aside {
   bottom: 0;
   overflow-y: auto;
   padding: 50px 0;
+  z-index: 100;
 
   background: $color-dark-primary;
   color: $color-light-1;
@@ -259,6 +261,14 @@ footer {
     margin-top: $size-header-height;
     margin-left: 0px;
     padding: 0 $padding-small;
+  }
+
+  main {
+    margin-top: calc(#{$size-header-height} + 20px);
+
+    header {
+      font-size: 1.6em;
+    }
   }
 
   footer {
